added maven to project for json interpreter